# MyQQView

./: .gitignore  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/utsoft/jan/myqqview/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: base_fragText.glsl  base_vertext.glsl
app/src/main/cpp/: BeaCamera4.cpp
app/src/main/cpp/camera/: CameraEngine.cpp  CameraEngine.h  CameraRender.cpp  CameraRender.h
app/src/main/cpp/egl/: EGLCore.cpp  EGLCore.h  EGLManager.cpp  EGLManager.h
app/src/main/cpp/filter/: GPUImageFilter.cpp  GPUImageFilter.h  OESImageFilter.cpp  OESImageFilter.h
app/src/main/cpp/filter/gpufilter/: MagicNoFilter.cpp  MagicNoFilter.h  MagicProcessFilter.cpp  MagicProcessFilter.h
app/src/main/cpp/info/: RendererInfo.h
app/src/main/cpp/utils/: OpenGLUtils.cpp  OpenGLUtils.h
app/src/main/java/com/utsoft/jan/myqqview/: AirRenderer.java  ApproveLayout.java  BezierEvaluator.java  CameraActivity.java  LoggerConfig.java  MainActivity.java  MainActivity2.java  OpenGLActivity.java  QQView.java  ShapeHelper.java  TextResourceReader.java  VideoRecordingActivity.java  lameActivity.java
app/src/main/java/com/utsoft/jan/myqqview/callback/: CameraCallback.java
app/src/main/java/com/utsoft/jan/myqqview/common/: Constants.java
app/src/main/java/com/utsoft/jan/myqqview/data/: VertexArray.java
app/src/main/java/com/utsoft/jan/myqqview/helper/: MatrixHelper.java
app/src/main/java/com/utsoft/jan/myqqview/object/: Mallet.java  ObjectBuilder.java  Puck.java  Table.java
app/src/main/java/com/utsoft/jan/myqqview/programs/: ColorShaderProgram.java  ShaderProgram.java  TextureShaderProgram.java
app/src/main/java/com/utsoft/jan/myqqview/utils/: Geometry.java  OpenGLJinLib.java  TextureHelper.java
app/src/main/res/drawable/: comone_bg_red_next_tip.xml  ic_love.xml  shape_play_progress.xml  shape_play_progress_thumb.xml
app/src/main/res/layout/: activity_after_effect.xml  activity_camera.xml  activity_lame.xml  activity_main.xml  activity_main2.xml  activity_opengl.xml  activity_video.xml
app/src/main/res/raw/: simple_vertex_shader.glsl
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/utsoft/jan/myqqview/: ExampleUnitTest.java
common/: build.gradle
common/src/main/java/Jni/: FFmpegCmd.java
common/src/main/java/com/utsoft/jan/common/app/: AppProfile.java  PresenterActivity.java
common/src/main/java/com/utsoft/jan/common/ffmpeg/: VideoCmdCallback.java  VideoCommand.java  VideoQueue.java
common/src/main/java/com/utsoft/jan/common/utils/: BitmapUtil.java  FileUtils.java  LogUtil.java  MutilBitmapUtils.java  PicturesCompressor.java  ResourcesUtil.java  Ui.java  (+5 more)
common/src/main/res/layout/: paster_item.xml
mp3encoder/: CMakeLists.txt  build.gradle
mp3encoder/src/androidTest/java/com/utsoft/jan/mp3encoder/: ExampleInstrumentedTest.java
mp3encoder/src/main/: AndroidManifest.xml
mp3encoder/src/main/cpp/: CMakeLists.txt  mp3EnconderJni.cpp
mp3encoder/src/main/cpp/libmp3_encoder/: CMakeLists.txt  Mp3Encoder.cpp  Mp3Encoder.h
mp3encoder/src/main/java/com/utsoft/jan/mp3encoder/: Mp3Encoder.java
mp3encoder/src/main/res/values/: strings.xml
mp3encoder/src/test/java/com/utsoft/jan/mp3encoder/: ExampleUnitTest.java
(+87 files in other folders)
